classDiagram

class FitnessApp {
    -DataProvider dataProvider
    +FitnessApp(DataProvider dataProvider)
    +run() void
}

class DataProvider {
    <<interface>>
    +getHealthData() String
}

class SmartWatchDataProvider {
    +getHealthData() String
}

class User {
    -String name
    +User(String name)
}

class Workout {
    -String type
    +Workout(String type)
}

DataProvider <|.. SmartWatchDataProvider
FitnessApp --> DataProvider : constructor injection
FitnessApp --> User
FitnessApp --> Workout
class FitnessApp {
  - workoutSessionService : WorkoutSessionService
  + setWorkoutSessionService(service : WorkoutSessionService) : void <<inject>>
}

class WorkoutSessionService

FitnessApp ..> WorkoutSessionService : <<inject>> via setter
